# Signal_event

./: .gitignore  CMakeLists.txt
include/sig_event/: sig_event.hpp
src/: sig_event.cpp
